tests/error/static_out.gw
#! [contains] can only be used at class scope
static var int i;
